--- a/src/components/Cart.module.css
+++ b/src/components/Cart.module.css
@@ -1,7 +1,61 @@
 .cart {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  margin: 5rem 0;
+  align-items: center;
+}
+
+.cartItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  width: 100%;
+  gap: 1rem;
+}
+
+.cartItem img {
+  max-width: 5rem;
+  height: auto;
+}
+
+.cartItem h3 {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+}
+
+.cartItem p {
+  margin: 0.5rem 0;
+}
+
+.cartItem span {
+  font-weight: bold;
+  background-color: var(--primary-light);
+  padding: 0.6rem 1rem;
+}
+
+.cartItem button {
+  background-color: var(--primary-dark);
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+.cartItem button:hover {
+  background-color: #0056b3;
+}
+
+.cartItem button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.quantity {
+  display: flex;
+  align-items: center;
 }
