--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -7,6 +7,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+
 }
 
 .header a {
