--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,49 +1,90 @@
-.header {
-  background-color: var(--gray-900);
-  color: var(--primary);
-  padding: 5rem;
-  text-align: center;
-  height: 15rem;
+.container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  gap: 3rem;
+  height: 15rem;
+  padding: 5rem;
+  background-color: var(--primary-light);
 
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 1000;
-
 }
 
-.header a {
-  color: var(--primary);
-  text-decoration: none;
-}
-
-.header h1 {
-  font-size: 5rem;
-}
-
-.header p {
-  font-size: 2.4rem;
-  margin: 0;
-}
-
-.cart {
+.actions {
   display: flex;
-  justify-content: center;
-  align-items: start;
-  gap: 1rem;
+  align-items: center;
+  justify-items: center;
+  gap: 2rem;
+}
+
+.container h1 {
+  font-size: 5rem;
+  font-weight: bolder;
+  color: var(--primary-dark);
+}
+
+.containerImg img {
+  height: auto;
+  width: 100%;
+  max-width: 20rem;
+}
+
+.container p {
+  font-size: 1.5rem;
+}
+
+.cartInfo {
+  border-radius: 3rem;
+  background-color: var(--background);
+  color: var(--text);
+  padding: 2rem;
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.link {
+  font-size: 2rem;
+  text-decoration: none;
+  color: var(--primary);
+  color: var(--text);
+  transition: color 0.3s;
+}
+
+.link:hover {
+  color: var(--primary-dark);
+}
+
+.cartIcon {
+  position: relative;
+  display: inline-block;
 }
 
 .cartCount {
-  background-color: var(--secondary);
-  color: var(--primary-contrast-dark);
-  border-radius: 50%;
-  padding: 0.5rem;
-  font-size: 1.2rem;
-  position: relative;
-  top: -0.5rem;
+  position: absolute;
+  top: -0.8rem;
+  right: -2rem;
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  background-color: var(--primary-dark);
+  color: var(--gray-100);
+  padding: 0.2rem 0.6rem;
+  font-weight: bold;
+  z-index: 1;
 }
 
+.welcomeMessage {
+  font-size: 1.5rem;
+  color: var(--text);
+  margin-right: 1rem;
+  text-decoration: none;
+}
+
+.welcomeMessage:hover {
+  /* color: var(--primary-dark); */
+  text-decoration: underline;
+}
